// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WhatsappButton adds a beforeClick function for the click handler 1`] = `
<ButtonRound
  aria-label="WhatsApp"
  className="share-button--whatsapp"
  href="#"
  icon={[Function]}
  label="WhatsApp"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`WhatsappButton does render if boxShadow is true 1`] = `
<ButtonRound
  aria-label="WhatsApp"
  boxShadow={true}
  className="share-button--whatsapp"
  href="#"
  icon={[Function]}
  label="WhatsApp"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`WhatsappButton does render if teaser are provided 1`] = `
<ButtonRound
  aria-label="WhatsApp"
  className="share-button--whatsapp"
  href="#"
  icon={[Function]}
  label="WhatsApp"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`WhatsappButton does render if utmParams are provided 1`] = `
<ButtonRound
  aria-label="WhatsApp"
  className="share-button--whatsapp"
  href="#"
  icon={[Function]}
  label="WhatsApp"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`WhatsappButton renders a round button 1`] = `
<ButtonRound
  aria-label="WhatsApp"
  className="share-button--whatsapp"
  href="#"
  icon={[Function]}
  label="WhatsApp"
  onClick={[Function]}
  role="button"
  title=""
/>
`;
